hphp/test/slow/pipe_expr/bad-pipevar-2.php.expectf

Fatal error: Pipe variables must occur only in the RHS of pipe expressions in %s/bad-pipevar-2.php on line 5
